# libnd4j

./: CMakeLists.txt
blas/: NativeOpExcutioner.h  NativeOps.h
blas/cpu/: NativeOps.cpp
blas/cuda/: NativeOps.cu
include/: broadcasting.h  pairwise_transform.h  pairwise_util.h  reduce.h  reduce3.h  scalar.h  shape.h  summarystatsreduce.h  transform.h
test/: CMakeLists.txt
test/tests/: broadcasttests.h  indexreducetests.h  pairwiseutiltests.h  reduce3tests.h  summarystatsreducetest.h  testhelpers.h  transformtests.h
